<resources>
    <string name="app_name">Bike Repaire</string>

    <string name="hint_email">Email Id</string>
    <string name="login">Login</string>
    <string name="login_btn">Login</string>
    <string name="password">Password</string>
    <string name="err_msg_email">Email id is not valid</string>
    <string name="err_msg_password">Password should be minimum of 5 length.</string>
    <string name="register">Register</string>
    <string name="regisetr">Register</string>
    <string name="hint_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="register_tv_message">Not Register Yet?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="err_msg_mobile">Mobile cannot be empty.</string>
    <string name="err_msg_name">Name cannot be empty.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="address">Address</string>
    <string name="ip_address">IP address</string>
    <string name="change_ip">Change IP</string>
    <string name="update_ip">Update IP</string>
    <string name="logout">Logout</string>
    <string name="service">Service</string>
    <string name="bike_wash">Bike Wash</string>
    <string name="map_server_key">AIzaSyBLu5Zc4st_ru8p91kSJjSpMRl-EGYLTgg</string>
    <string name="map">Map</string>
    <string name="nearby_gairage">Near By Garage</string>
    <string name="bike_serviceing">Vahicle Servicing</string>
    <string name="home">Home</string>
    <string name="customer">Customer</string>
    <string name="gairage">Garage</string>
    <string name="user_type">User Type</string>
    <string name="otp_title">OTP Here</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pasword">Confirm Password</string>
    <string name="update_password">Update Password</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="message_here">Any Comments here...</string>
    <string name="submit">Submit</string>
    <string name="select_service">Select Service</string>
    <string name="send_service">Request Service</string>
    <string name="all_customer">All Customer</string>
    <string name="service_status">Update Service Status</string>
    <string name="user_details">User Details</string>
    <string name="genrate_bill">Genrate Bill</string>
    <string name="service_bills">Service Bills</string>
    <string name="user_bills">User Bills</string>
    <string name="service_name">Service Name</string>
    <string name="service_cost">Service Cost</string>
    <string name="add_service">Add Services</string>
    <string name="account_number">Account Number</string>
    <string name="aadhar_number">Adhar Number</string>
    <string name="account_balance">Balance</string>
    <string name="dob">DOB</string>
    <string name="geo_fence">GeoFence Values</string>
    <string name="update">Update</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="transection">Transaction</string>
    <string name="transection_type">Transection Type</string>
    <string name="amount">Amount</string>
    <string name="acc_name">Acount Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv_number">CVV Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="delete_geofence">Delete GeoFence</string>
    <string name="update_geofence">Update GeoFence</string>

</resources>
