<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/account_number"
                android:inputType="number"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_acc_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/acc_name"
                android:inputType="text"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_transection_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/transection_type"
                android:inputType="text"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/amount"
                android:inputType="number"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/card_number"
                android:inputType="number"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_expaire_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/expire_date"
                android:inputType="text"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_cvv_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/cvv_number"
                android:inputType="number"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_send_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="@drawable/button_primary_backgraound"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
