<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/ut_usertype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:padding="11dp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLength="40"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="40"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/dob"
                android:inputType="text"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:padding="11dp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:digits="0123456789"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/account_number"
                android:inputType="number"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_aadhar_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/aadhar_number"
                android:inputType="number"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_account_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/account_balance"
                android:inputType="number"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_primary_backgraound"
                android:gravity="center"
                android:text="@string/regisetr"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
