<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="18dp"
                android:src="@drawable/ic_encryption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/ut_usertype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:padding="11dp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_backgraound"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="40"
                android:padding="11dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_primary_backgraound"
                android:gravity="center"
                android:text="@string/login_btn"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="26dp"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:text="@string/register_tv_message"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="26dp"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:text="@string/register_tv_message"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
